--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,5 +14,6 @@
 
 @import './sections/about';
 @import './sections/contact';
+@import './sections/blog';
 @import './sections/hero';
 @import './sections/projects';
