--- a/src/style/sections/_blog.scss
+++ b/src/style/sections/_blog.scss
@@ -1,11 +1,15 @@
-#contact {
-  background-color: $white-color;
+#blog {
+  background-image: linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -1px;
-  color: $dark-blue-text;
+  color: $white-color;
 
   @include respond(tab-land) {
     padding: 10rem 0;
@@ -14,7 +18,7 @@
     -webkit-clip-path: none;
   }
 
-  .contact-wrapper {
+  .blog-wrapper {
     margin-top: 3.2rem;
     padding: 0 2rem;
     backface-visibility: hidden;
@@ -27,10 +31,20 @@
     a {
       font-size: 2.4rem;
 
-      // Responsive for contact text
+      // Responsive for blog text
       @include respond(phone) {
         font-size: 2rem;
       }
     }
   }
+
+  .card-bg {
+    background-color: $white-color;
+    color: $dark-blue-text;
+  }
+
+  p {
+    font-size: 1.0rem;
+  }
+  
 }
