--- a/src/style/sections/_contactBKP.scss
+++ b/src/style/sections/_contactBKP.scss
@@ -1,11 +1,15 @@
 #contact {
-  background-color: $white-color;
+  background-image: linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -1px;
-  color: $dark-blue-text;
+  color: $white-color;
 
   @include respond(tab-land) {
     padding: 10rem 0;
